--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -10,7 +10,7 @@
     "subtitle": "Welcome to Univille"
   },
   "login": {
-    "title": "Login",
+    "title": "Welcome To Univille",
     "subtitle": "Login to access your account.",
     "email": "Your Email..",
     "password": "Password",
